--- a/index.html
+++ b/index.html
@@ -4,37 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Betlegend Picks</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #0b0c10;
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-    }
-    img {
-      max-width: 300px;
-      margin-bottom: 20px;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin: 0 0 10px;
-    }
-    p {
-      font-size: 1.2em;
-      color: #bbbbbb;
-    }
-  </style>
 </head>
-<body>
-  <img src="betlegend-logo.png" alt="Betlegend Logo">
-  <h1>Betlegend Picks</h1>
+<body style="text-align:center; font-family:sans-serif; background:#0b0c10; color:white;">
+  <img src="betlegend-logo.png" alt="Betlegend Logo" style="max-width:300px; margin-top:50px;">
+  <h1>Welcome to Betlegend Picks</h1>
   <p>Smart bets. Sharp analysis. Legendary wins.</p>
 </body>
 </html>
