--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       color: white;
       font-family: Arial, sans-serif;
       text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+    }
+    .container {
+      max-width: 700px;
+      margin: auto;
+      padding: 30px 20px;
     }
     img {
       max-width: 300px;
@@ -24,17 +24,27 @@
     }
     h1 {
       font-size: 2.5em;
-      margin: 0 0 10px;
+      margin-bottom: 0.5em;
     }
-    p {
+    h2 {
+      font-size: 1.8em;
+      margin-top: 40px;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
       font-size: 1.2em;
-      color: #bbbbbb;
     }
-  </style>
-</head>
-<body>
-  <img src="betlegend-logo.png" alt="Betlegend Logo">
-  <h1>Betlegend Picks</h1>
-  <p>Smart bets. Sharp analysis. Legendary wins.</p>
-</body>
-</html>
+    li {
+      margin: 10px 0;
+    }
+    .affiliate {
+      margin-top: 40px;
+    }
+    .affiliate a {
+      background: #ffcc00;
+      color: black;
+      padding: 15px 30px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 10px
